fix spacing

--- a/main.scss
+++ b/main.scss
@@ -71,80 +71,85 @@ nav {
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
-    .fa-bars {
-        font-size: 30px;
-        margin-top: 7px;
-        color: rgba($color: #fff, $alpha: 0.60);
-    }
+  .fa-bars {
+    font-size: 30px;
+    margin-top: 7px;
+    color: rgba($color: #fff, $alpha: 0.60);
+  }
 
-    .fa-user {
-        visibility: hidden;
-    }
+  .fa-user {
+    visibility: hidden;
+  }
 
-    .btn {
-        height: 30px;
-        width: 170px;
-        font-size: 20px;
-       margin-top: 12px;
-    }
+  .btn {
+    height: 30px;
+    width: 170px;
+    font-size: 20px;
+    margin-top: 12px;
+  }
 
-    .login {
-        font-family: $sub-font;
-        font-size: 18px;
-        font-weight: bold;
-        color: white;
-        margin-top: 23px;
-        margin-right: -20px;
-        visibility: visible;
-    }
+  .login {
+    font-family: $sub-font;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    margin-top: 23px;
+    margin-right: -20px;
+    visibility: visible;
+  }
 
-    .footer1 {
-      display: flex;
-      flex-direction: row;
-    }
+  .footer1 {
+    display: flex;
+    flex-direction: row;
+  }
 
-    .footer-social {
-      display: flex;
-      flex-direction: row;
-      margin-top: 20px;
-      margin-bottom: 5px;
-      margin-left: auto;
+  .footer-social {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    margin-left: auto;
+    
+  }
+
+  .footer-text {
+    overflow-wrap: normal;
+    margin-top: 30px;
+    margin-bottom: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #666666;
+  }
+
+  .footer-image {
+    margin-top: 7px;
+  }
+
+  hr {
+    margin-top: 0;
+  }
+
+  .foot2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #666666;
+  }
+
+  .row2 {
+    visibility: visible;
+    height: 200px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .row1 {
+    visibility: hidden;
+    height: 0;
+  }
+
+    @media (min-width: 992px) {
+     
       
-    }
-
-    .footer-text {
-      overflow-wrap: normal;
-      margin-top: 30px;
-      margin-bottom: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 14px;
-      color: #666666;
-    }
-
-    .footer-image {
-      margin-top: 7px;
-    }
-
-    hr {
-      margin-top: 0;
-    }
-
-    .foot2 {
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 14px;
-      color: #666666;
-    }
-
-    .row2 {
-      visibility: visible;
-      height: 200px;
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .row1 {
-     visibility: hidden;
-     height: 0;
     }
 }
